# ishtar_ai

./: .dockerignore  .gitignore  API_SETUP.md  ASGI_README.md  Dockerfile  LICENSE  README.md  asgi_app.py  check_env.py  config.py  curl_examples.sh  direct_search.py  docker-compose-asgi.yml  docker-compose.yml  env.example  gradio_app.py  ollama_client.py  poetry_setup.sh  pyproject.toml  requirements.txt  run_app.sh  run_ishtar.sh  run_with_tavily.sh  sample_embeddings.py  set_tavily_key.py  setup.sh  setup_and_run.sh  setup_tavily.sh  streamlit_app.py  update_newsapi.sh  update_tavily_key.sh  update_weather_key.sh
apps/api/: deps.py  main.py  schemas.py
flagged/: log.csv
huggingface_deploy/: app.py
infra/: compose.dev.yml  prometheus.yml
infra/docker/: api.Dockerfile  worker.Dockerfile
ishtar/agents/: graph.py  policies.py  prompts.py  tools.py
ishtar/config/: settings.py
ishtar/ingestion/: normalize.py  pipeline.py
ishtar/ingestion/readers/: rss.py
ishtar/llm/: client.py  settings.py
ishtar/obs/: metrics.py  tracing.py
ishtar/rag/: context.py  embeddings.py  retriever.py  vectorstore.py
ishtar_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ishtar_ai/app/: main.py
ishtar_ai/data_ingestion/: ingest.py
ishtar_ai/rag/: pipeline.py
ishtar_app/: app.py  monkeypatch.py
ishtar_app/components/: chat.py  header.py  sidebar.py
llm_env/: .env  Dockerfile  README.md  docker-compose.yml  pyvenv.cfg  requirements.txt  restart_app.sh  run_with_tavily.sh  set_tavily_key.py  setup_tavily.sh
llm_env/src/: config.py  ollama_client.py  streamlit_app.py  tavily_search.py
retrieval/: config.py  langsmith_integration.py  newsapi_integration.py  tavily_search.py  weather_api.py
scripts/: README.md  ingest_seed.py  update_langsmith_key.sh  update_pinecone.sh  update_tavily_key.sh
src/: config.py  langsmith_integration.py  newsapi_integration.py  pinecone_integration.py  tavily_search.py
static/: index.html
tests/: test_agents.py  test_api.py  test_app.py  test_pipeline.py  test_rag.py
utils/: embeddings.py  news_fetcher.py  pinecone_upload.py  text_processing.py
