[tool.poetry]
name = "ishtar_ai"
version = "0.1.0"
description = "Ishtar AI - RAG assistant for journalists"
authors = ["Ishtar AI Team"]

[tool.poetry.dependencies]
python = ">=3.10, <3.14"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
langchain = "^0.2.0"
langchain-community = "^0.2.0"
langchain-text-splitters = "^0.2.0"
langchain-openai = "^0.1.0"
pydantic = "^2.7"
openai = "*"
httpx = "*"
gradio = "^4.26.0"
llama-api-client = "^0.1.1"
protobuf = "^3.20"
python-dotenv = "^1.0.0"
# pinecone = "^4.3.0" # Removed
# langchain-pinecone = "0.3.0" # Removed
langsmith = {version = "^0.1.52", optional = true}
# chromadb = "^0.5.0" # Removed
faiss-cpu = "^1.7.4" # Added FAISS (CPU version)
tavily-python = "^0.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
