[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ishtar-ai"
version = "0.1.0"
description = "Ishtar AI: RAG + Multi-Agent API (bootstrap)"
authors = [{name="David Stroud"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
]
[project.optional-dependencies]
dev = [
  "ruff>=0.6,<1",
  "black>=24.0,<25",
  "mypy>=1.10,<1.11",
  "pytest>=8.0,<9",
  "pytest-asyncio>=0.23,<0.24",
  "pytest-cov>=5.0,<6",
]
[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["ishtar"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
xfail_strict = true
filterwarnings = [
  "error",
]
asyncio_mode = "auto"
